<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="@dimen/margin_large_top">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_large_36"
            android:paddingEnd="@dimen/padding_large_36"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_label"
                android:textAppearance="@style/Header_Roboto_700_29" />

            <include layout="@layout/spacer" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/description_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_label"
                android:textAppearance="@style/Description_Roboto_400_19" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/banner"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/banner_height"
            android:layout_marginTop="@dimen/margin_small_top"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description_main_image"
            android:scaleType="centerCrop"
            android:src="@drawable/music"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_large_36"
            android:paddingEnd="@dimen/padding_large_36"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/banner">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/biography_button"
                style="@style/ButtonStyle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium_bottom"
                android:text="@string/biography_artist_button_label" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/besttracks_button"
                style="@style/ButtonStyle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium_bottom"
                android:text="@string/best_tracks_button_label" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
